--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .dccache
+Project_Starter_Files-Building_a_Metrics_Dashboard/2022-02-10-12-02-50.068-VBoxSVC-97145.log
+Project_Starter_Files-Building_a_Metrics_Dashboard/2022-02-10-12-02-51.000-VBoxHeadless-97649.log
+.pdm.toml
+Project_Starter_Files-Building_a_Metrics_Dashboard/.vagrant/rgloader/loader.rb
