--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/backend/requirements.txt
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/backend/requirements.txt
@@ -4,4 +4,7 @@ pylint==2.4.0
 gunicorn==20.0.4
 pymongo==3.11.0
 Flask-PyMongo==2.3.0
-prometheus-client==0.12.0
+jaeger-client==4.3.0
+flask-cors==3.0.10
+prometheus-flask-exporter==0.18.2
+Flask-Opentracing==1.1.0
