--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/frontend/requirements.txt
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/frontend/requirements.txt
@@ -2,3 +2,7 @@ Flask==1.1.2
 requests==2.23.0
 pylint==2.4.0
 gunicorn==20.0.4
+jaeger-client==4.3.0
+flask-cors==3.0.10
+prometheus-flask-exporter==0.18.2
+Flask-Opentracing==1.1.0
