--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Project_Starter_Files-Building_a_Metrics_Dashboard/2022-02-10-12-02-50.068-VBoxS
 Project_Starter_Files-Building_a_Metrics_Dashboard/2022-02-10-12-02-51.000-VBoxHeadless-97649.log
 .pdm.toml
 Project_Starter_Files-Building_a_Metrics_Dashboard/.vagrant/rgloader/loader.rb
+JoshHaines_Project3.zip
